--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
@@ -17,7 +18,10 @@
         android:supportsRtl="false"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
         tools:targetApi="31">
-        <activity android:name=".ui.screens.MyProductActivity"/>
+        <activity
+            android:name=".ui.screens.ProductCreationActivity"
+            android:exported="false" />
+        <activity android:name=".ui.screens.MyProductActivity" />
         <activity
             android:name=".ui.screens.MainActivity"
             android:exported="true">
