feat: Add SettingsActivity and enable RTL support
This commit introduces the `SettingsActivity` to the AndroidManifest.xml and enables Right-To-Left (RTL) language support for the application.

Specifically, the `android:supportsRtl` attribute in the `<application>` tag has been set to `true`, and a new `<activity>` declaration for `.ui.screens.SettingsActivity` has been added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,12 @@
         android:icon="@mipmap/icon3_v2"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/icon3_v2_round"
-        android:supportsRtl="false"
+        android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.screens.SettingsActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.screens.ProductCreationActivity"
             android:exported="false" />
