--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/icon3_v2_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+        android:theme="@style/Theme.Material3.DayNight"
         tools:targetApi="31">
         <activity
             android:name=".ui.screens.SettingsActivity"
@@ -24,10 +24,13 @@
         <activity
             android:name=".ui.screens.ProductCreationActivity"
             android:exported="false" />
-        <activity android:name=".ui.screens.MyProductActivity" />
+        <activity android:name=".ui.screens.MyProductActivity"
+            android:theme="@style/Theme.Material3.DayNight"/>
         <activity
             android:name=".ui.screens.MainActivity"
-            android:exported="true">
+            android:windowSoftInputMode="adjustResize"
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
