refactor: Update MyProductActivity in AndroidManifest
This commit updates the `MyProductActivity` declaration in the `AndroidManifest.xml`. It removes the explicit `android:theme` attribute and sets `android:exported="false"`.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name=".ui.screens.ProductCreationActivity"
             android:exported="false" />
         <activity android:name=".ui.screens.MyProductActivity"
-            android:theme="@style/Theme.Material3.DayNight"/>
+            android:exported="false"/>
         <activity
             android:name=".ui.screens.MainActivity"
             android:windowSoftInputMode="adjustResize"
