--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/icon3_v2"
+        android:icon="@mipmap/ic_launcher_calcal"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/icon3_v2_round"
+        android:roundIcon="@mipmap/ic_launcher_calcal_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.DayNight"
         tools:targetApi="31">
