--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity
             android:name=".ui.screens.ProductCreationActivity"
             android:exported="false" />
-        <activity android:name=".ui.screens.MyProductActivity"
+        <activity android:name=".ui.screens.customProductActivity"
             android:exported="false"/>
         <activity
             android:name=".ui.screens.MainActivity"
