--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,13 +24,13 @@
         <activity
             android:name=".ui.screens.ProductCreationActivity"
             android:exported="false" />
-        <activity android:name=".ui.screens.customProductActivity"
-            android:exported="false"/>
+        <activity
+            android:name=".ui.screens.customProductActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.screens.MainActivity"
-            android:windowSoftInputMode="adjustResize"
             android:exported="true"
-            >
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
